fix: urls handled in different service, bumped dependencies versions