@@ -2,12 +2,11 @@ package com.asomusic.backend.service.album;
 
 import com.asomusic.backend.model.dto.AlbumPreviewDTO;
 import com.asomusic.backend.repository.album.IAlbumRepository;
-import com.asomusic.backend.service.storage.FirebaseStorageService;
+import com.asomusic.backend.service.storage.IStorageUrlService;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class AlbumService implements IAlbumService {
@@ -16,7 +15,7 @@ public class AlbumService implements IAlbumService {
     IAlbumRepository albumRepository;
 
     @Inject
-    FirebaseStorageService firebaseStorageService;
+    IStorageUrlService storageUrlService;
 
     @Override
     public List<AlbumPreviewDTO> fetchAllAlbumsPreview() {
@@ -24,22 +23,40 @@ public class AlbumService implements IAlbumService {
             return albumRepository.fetchAllAlbumsPreview()
                     .stream()
                     .map(this::convertUrls)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception e) {
-            throw new RuntimeException("❌ Errore durante il recupero degli album", e);
+            throw new RuntimeException(
+                    "Errore durante il recupero degli album",
+                    e
+            );
         }
     }
 
     @Override
     public AlbumPreviewDTO unlockAlbum(String albumId) {
         try {
-            albumRepository.updateAlbumAvailability(albumId, true);
-            return albumRepository.fetchAlbumPreviewById(albumId);
+            albumRepository.updateAlbumAvailability(
+                    albumId,
+                    true
+            );
+
+            AlbumPreviewDTO album =
+                    albumRepository.fetchAlbumPreviewById(albumId);
+
+            if (album == null) {
+                throw new IllegalStateException(
+                        "Album non trovato: " + albumId
+                );
+            }
+
+            return convertUrls(album);
         } catch (Exception e) {
-            throw new RuntimeException("❌ Errore durante lo sblocco dell'album " + albumId, e);
+            throw new RuntimeException(
+                    "Errore durante lo sblocco dell'album " + albumId,
+                    e
+            );
         }
     }
-
 
     private AlbumPreviewDTO convertUrls(AlbumPreviewDTO album) {
         return AlbumPreviewDTO.builder()
@@ -47,10 +64,17 @@ public class AlbumService implements IAlbumService {
                 .name(album.getName())
                 .artist(album.getArtist())
                 .releaseDate(album.getReleaseDate())
-                .coverURL(firebaseStorageService.generateSignedUrl(album.getCoverURL()))
+                .coverURL(resolveStorageUrl(album.getCoverURL()))
                 .available(album.isAvailable())
                 .availableAt(album.getAvailableAt())
                 .build();
     }
 
+    private String resolveStorageUrl(String storagePath) {
+        if (storagePath == null || storagePath.isBlank()) {
+            return null;
+        }
+
+        return storageUrlService.getSignedUrl(storagePath);
+    }
 }
